Cleanup files, fix small css bug
Deleted unnecessary files
Fixed password requirements being unreadable
cleaned up user-dictionary

--- a/calculator_project/calculator_app/static/css/style.css
+++ b/calculator_project/calculator_app/static/css/style.css
@@ -86,3 +86,6 @@ input[type="reset"]:focus {
     text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
     font-weight: bold;
 }
+#passrules {
+    color: black
+}
